using System.ComponentModel.DataAnnotations;

namespace Entities.DTOs;

public record BookDtoForUpdate : BookDtoBase
{

}

