@startuml
title BookApi

left to right direction

package Entities {
    class Book {
        +Id: int
        +Title: String
        +Price: Decimal
        +URL: String
        +CategoryId: int
        +Category: Category
    }

    class Category {
        +CategoryId: int
        +CategoryName: String
        +Books: ICollection<Book>
    }

    class User {
        +FirstName:String?
        +LastName:String?
    }



    User --|> IdentityUser : "<<extends>>"

    ' Category "1" --> "0..*" Book : "Books"
    Book "n" o-down-> "1" Category : "one to many"
}

package Entities.DTOs
{

    abstract class BookDtoBase
    {
        +title:String
        +price:Decimal
        +categoryId:int
    }

    class BookDto
    {
        +id:int
    }
    class BookDtoForInsertion
    {

    }
    class BookDtoForUpdate
    {

    }

    class UserForRegistrationDto {
        + FirstName: String?
        + LastName: String?
        + UserName: String <<Required>>
        + Password: String <<Required>>
        + Email: String?
        + PhoneNumber: String?
        + Roles: ICollection<String>
    }
    class UserForAuthenticationDto {
        +userName:String <<Required>>
        +password:String <<Required>>
    }

    class TokenDto {
        + AccessToken: String
        + RefreshToken: String
    }
}

package Entities.Exceptions
{
    abstract class NotFoundException {
        +NotFoundException(message: String)
    }

    class BookNotFoundException {
        +BookNotFoundException(id: int)
    }
}


package Repositories
{
    class IdentityDbContext<User>
    {

    }
    class RepositoryContext   {
        +Books:DbSet<Book>
        +Categories:DbSet<Category>
        +RepositoryContext(options:DbContextOptions)
        +OnModelCreating(modelBuilder:ModelBuilder)
    }

    abstract class RepositoryBase<T> {
        # _context:RepositoryContext
        + Get(int id): T?
        + GetAll(): List<T>
        + Add(T item): void
        + Remove(T item): void
        + Update(T item): void
    }
    class BookRepository {
        +Get(id):Book?
        +GetAll():List<Book>
    }
    class CategoryRepository {

    }




}

package Services
{
    class AuthenticationManager {
        - _mapper: IMapper
        - _userManager: UserManager<User>
        - _configuration: IConfiguration
        - _user: User?

        + RegisterUserAsync(userForRegistrationDto: UserForRegistrationDto): Task<IdentityResult>
        + ValidateUserAsync(userForAuthDto: UserForAuthenticationDto): Task<bool>
        + CreateTokenAsync(populateExp: bool): Task<TokenDto>
        + RefreshTokenAsync(tokenDto: TokenDto): Task<TokenDto>
        - GetSigningCredentials(): SigningCredentials
        - GetClaims(): Task<List<Claim>>
        - GenerateTokenOptions(signingCredentials: SigningCredentials, claims: List<Claim>): JwtSecurityToken
        - GenerateRefreshToken(): String
        - GetPrincipalFromExpiredToken(token: String): ClaimsPrincipal
        - Validate<T>(item: T): void
    }

    class BookService
    {

    }
    class BookServiceV2
    {


    }
    class BookServiceV3
    {
        -context:BookRepository
        --
        +Count:int
        --
        +GetBooks():List<Book>
        +GetBookById(int:i):Book
        +AddBook(item:BookDtoForInsertion)
        +UpdateBook(id:int, item:BookDtoForUpdate)
        +DeleteBook(id:int)
        -Validate<T>(item:T)
    }




}


package Abstracts
{
    interface IBookService
    {
        +Count:int
        +GetBooks():List<Book>
        +GetBookById(id:int):Book
        +AddBook(item:BookDtoForInsertion):Book
        +UpdateBook(id:int, item:BookDtoForUpdate):Book
        +DeleteBook(id:int):void
    }

    interface IAuthenticationService {
        + RegisterUserAsync(userForRegistrationDto: UserForRegistrationDto): Task<IdentityResult>
        + ValidateUserAsync(userForAuthDto: UserForAuthenticationDto): Task<bool>
        + CreateTokenAsync(populateExp: bool): Task<TokenDto>
        + RefreshTokenAsync(tokenDto: TokenDto): Task<TokenDto>
    }
}

package Configuration {
    class MappingProfile {

    }
    class ConfigurationExtensions {
        {static} +ValidateIdRange(int id): void
        {static} +UseCustomExceptionHandler(IApplicationBuilder app): void
        {static} +AddCustomCors(services:IServiceCollection): IServiceCollection
        {static} +AddCustomSwagger(services:IServiceCollection): IServiceCollection
        {static} +ConfigureIdentity(services: IServiceCollection): void
        {static} +ConfigureJWT(services: IServiceCollection, configuration: IConfiguration): void
    }
}

MappingProfile -right-|> Profile : "<<extends>>"

BookService .up.|> IBookService : "<<implements>>"
BookServiceV2 .up.|> IBookService : "<<implements>>"
BookServiceV3 .up.|> IBookService : "<<implements>>"


BookRepository -l-|> RepositoryBase  : "<<extends>>"
CategoryRepository -r-|> RepositoryBase  : "<<extends>>"
RepositoryBase o-d- RepositoryContext : "has-a"
RepositoryContext -r-|> IdentityDbContext : "<<extends>>"

BookNotFoundException -right-|> NotFoundException : "<<extends>>"



BookDto -up-|> BookDtoBase : "<<extends>>"
BookDtoForUpdate -left-|> BookDtoBase : "<<extends>>"
BookDtoForInsertion -right-|> BookDtoBase : "<<extends>>"

AuthenticationManager .right.|> IAuthenticationService : "<<implements>>"

hide empty members